2008-09-24  David Edelsohn  <edelsohn@gnu.org>

	Revert:
	2008-09-24  Michael J. Eager  <eager@eagercon.com>

2008-09-24  Aldy Hernandez  <aldyh@redhat.com>

	* c-common.c (fname_decl): New location argument.
	* c-common.h (fname_decl): Same.
	* c-parser.c (c_lex_one_token): Use {warning,error}_at instead of
	{warning,error}.
	(c_parser_typeof_specifier): Same.
	(c_parser_parms_list_declarator): Same.
	(c_parser_asm_string_literal): Same.
	(c_parser_compound_statement_nostart): Same.
	(c_parser_label): Same.
	(c_parser_do_statement): Same.
	(c_parser_asm_statement): Same.
	(c_parser_unary_expression): Same.
	(c_parser_sizeof_expression): Same.
	(c_parser_postfix_expression): Same.
	(c_parser_pragma): Same.
	(c_parser_omp_clause_collapse): Same.
	(c_parser_omp_clause_num_threads): Same.
	(c_parser_omp_clause_schedule): Same.
	(c_parser_omp_all_clauses): Same.
	(c_parser_omp_sections_scope): Same.
	(c_parser_omp_for_loop): Same.  Pass condition's location to
	c_objc_common_truthvalue_conversion.
	(c_parser_enum_specifier): Remove comment.

2008-09-24  Michael J. Eager  <eager@eagercon.com>

	* config/rs6000/predicates.md (easy_fp_constant): Single FP consts
	are easy.
	* config/rs6000/rs6000.c (rs6000_override_options): Move
	rs6000_init_hard_regno_mode_ok after all options changed.
	Set rs6000_single_float, rs6000_double_float if TARGET_HARD_FLOAT.
	(rs6000_handle_option): Process -msingle-float, -mdouble-float,
	-msimple-fpu flags.  Add warning messages if single FP not configured.
	(rs6000_file_start): Output gnu_attribute for single-float.
	(legitimate_lo_sum_address_p): Condition on TARGET_DOUBLE_FLOAT.
	(rs6000_legitimize_address): Likewise.
	(rs6000_legitimize_reload_address): Likewise.
	(rs6000_emit_move): Condition on TARGET_DOUBLE_FLOAT,
	TARGET_SINGLE_FLOAT.
	(function_arg_advance): Likewise.
	(function_arg): Likewise.
	(setup_incoming_varargs): Condition on TARGET_DOUBLE_FLOAT.
	(rs6000_gimplify_va_arg): Condition on TARGET_DOUBLE_FLOAT,